more bugs squashed, comments need to be deleted

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ button:disabled{
   cursor: default;
 }
 
-.toggle {
+.hidden {
   display: none;
 }
 
